<resources>
    <string name="app_name">ShopWallet</string>
    <string name="hello_world_shopwallet">Hello World ShopWallet!</string>
    <string name="createAccountButtonText">Create Account</string>
    <string name="signInButtonText">Sign In</string>
    <string name="shopwallet_logo_description">ShopWallet Logo</string>
    <string name="enter_user_id">User ID</string>
    <string name="material_icon_person">person</string>
    <string name="enter_email_address">Email Address</string>
    <string name="enter_phone_number">Phone Number</string>
    <string name="enter_full_name">Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="next_text">Next</string>
    <string name="verify_otp_header_text">Verify OTP</string>
    <string name="your_otp_has_been_sent_text">Your OTP has been sent to: </string>
    <string name="sentotp_email_text">sentotp@email.com</string>
    <string name="otp_digit">  </string>
    <string name="time_to_expiry_text">Time: </string>
    <string name="time_remaining_text">09m 54s</string>
    <string name="resend_link">Resend</string>
    <string name="otp_code_text">OTP Code</string>
    <string name="select_2FA_text">Please select your 2-factor authentication</string>
    <string name="pattern_pin_text">Pattern or PIN</string>
    <string name="biometric_selected_text">Biometric Authentication</string>
    <string name="register_completed_text">Registration Completed</string>
    <string name="registration_completed_banner_content_desc">Registration Completed Banner</string>
    <string name="close_button_text">Close</string>
    <string name="user_profile">user profile icon</string>
    <string name="home">home</string>
    <string name="qr_auth">QR Authentication</string>
    <string name="otp_auth">OTP Authentication</string>
    <string name="settings">settings</string>
    <string name="wallet_topup">Wallet Top Up</string>
    <string name="mobile_reload">Mobile Reload</string>
    <string name="money_transfer">Money Transfer</string>
    <string name="card_holder">First Name Last Name</string>
    <string name="card_expiry">05/28</string>
    <string name="card_number">XXX XXX 8877</string>
    <string name="transaction_title">Transaction Title</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="transaction_icon">Transaction Icon</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="profile_text">Profile</string>
    <string name="user_profile_id">1234</string>
    <string name="personal_info_text">Personal Info</string>
    <string name="authentication_type_text">Authentication Type</string>
    <string name="authentication_history_text">Authentication History</string>
    <string name="delete_account_text">Delete Account</string>
    <string name="email_sample_text">yuyuloe@gmail.com</string>
    <string name="remove_device">Remove Device</string>
    <string name="email">Email:</string>
    <string name="name">Name:</string>
    <string name="muna">muna</string>
    <string name="username">Username:</string>
    <string name="are_you_sure_text">Are you sure you want to remove your device ?</string>
    <string name="you_will_be_require_text">You will be required to sign in again to continue use ShopWallet</string>
    <string name="caution_icon_image_view">Caution Icon</string>
    <string name="confirm_button_text">Confirm</string>
    <string name="press_yes_to_deregister_device">Press [Yes] to deregister your device.\nRe-register the device when you restart the app.</string>
    <string name="do_you_want_to_deregister_device">Do you want to deregister the device?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="device_registration">Device Registration</string>
    <string name="biometric_authentication_header">Biometric Authentication</string>
    <string name="biometric_auth_description">Biometric Authentication will be requested after authentication</string>
    <string name="biometric_icon_image">Biometric Icon Image</string>
    <string name="pin_pattern_icon_image">Pin/Pattern Icon</string>
    <string name="pin_pattern_authentication_header">PIN/Pattern Authentication</string>
    <string name="pin_pattern_auth_description">PIN/Pattern authentication will be requested after authentication</string>
    <string name="change">Change</string>
    <string name="account_creation">Account Creation</string>
    <string name="auth_history_title">Title</string>
    <string name="auth_history_status">Status</string>
    <string name="auth_history_date_and_time">Date and Time</string>
    <string name="status_success">Success</string>
    <string name="status_failure">Failure</string>
    <string name="do_you_want_to_delete_account">Do you want to delete user information?</string>
    <string name="press_yes_to_delete_your_information">Press [Yes] to delete your information.</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="minimum_amount_note">Minimum Amount is NGN 10.0</string>
    <string name="submit">Submit</string>
    <string name="note_deduction">Note: Deductions will be made from your eWallet balance</string>
    <string name="recipients_name">Recipient\'s Name</string>
    <string name="enter_amount_to_transfer">Amount to transfer</string>
    <string name="enter_recipients_card_number">Enter Recipients Card Number</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="scan_qr_code_with_the_scanner_to_continue_authentication">Scan QR code with the scanner to continue authentication.</string>
    <string name="close">Close</string>
    <string name="site_link">Website Link</string>
    <string name="faq_text">FAQ</string>
    <string name="information_for_seamless_use_of_shopwallet">Information for seamless use of ShopWallet</string>
    <string name="see_questions_and_answers">See questions and answers</string>
    <string name="q">Q</string>
    <string name="shopwallet_website">ShopWallet Website Link</string>
    <string name="search_icon">Search Icon for Website Link</string>
    <string name="website_search">Website Search</string>
    <string name="search_website_name_to_link_with_app">Type the name of your website to link it with the ShopWallet App</string>
    <string name="website_name">Website Name</string>
    <string name="link_website_button_text">Link</string>
    <string name="add_icon">Add Icon</string>
    <string name="agreement_to_terms_of_use">Agreement to terms of use</string>
    <string name="agreement_to_personal_information_processing_policy">Agreement to personal information processing policy</string>
    <string name="agreement_to_device_information_use">Agreement to device information use</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="pin_pattern_checkmark_icon">PIN/Pattern Checkmark Icon</string>
    <string name="biometric_checkmark_icon">Biometric Checkmark Icon</string>
    <string name="device_re_register_logo_image">Device Re-register logo image</string>
    <string name="animated_gif_for_authenticating_image_view">Animated GIF for Authenticating Image View</string>
    <string name="authenticating">Authenticating ...</string>
    <string name="auth_success_text">Authentication Successful</string>
    <string name="balance">Balance</string>
    <string name="your_balance">Your Balance</string>
    <string name="error_fetching_balance">Error fetching balance</string>
    <string name="balance_not_found">Balance not found</string>
    <string name="_0_00">0.00</string>
    <string name="rm">RM</string>
    <string name="bank_name">Bank Name</string>
    <string name="link_your_bank_account_to_your_wallet">Link your Bank Account to your Wallet</string>
    <string name="account_number">Account Number</string>
    <string name="link_to_wallet">Link to Wallet</string>
    <string name="linked">Linked</string>
    <string name="linked_check_mark">linked Check Mark</string>
    <string name="failed_text">Failed</string>
    <string name="linked_string">Linked</string>
    <string name="processing_status_text">Processing...</string>
    <string name="ellipsis">...</string>
    <string name="wallet_number">Wallet Number</string>
    <string name="no_recent_transactions">No Recent Transactions</string>
    <string name="no_wallet_id_found">No Wallet ID found</string>
    <string name="no_wallet_holder_found">No Wallet Holder found</string>
    <string name="error_fetching_wallet_id">Error fetching Wallet ID</string>
    <string name="error_fetching_wallet_holder">Error fetching Wallet Holder</string>
    <string name="no_creation_date">no creation date</string>
    <string name="error_getting_date">Error Getting Date</string>
    <string name="fund_wallet">Fund</string>
    <string name="send_money">Send</string>
    <string name="money_receive">money receive</string>
    <string name="receive_money">Receive</string>
    <string name="wallet_id">Wallet ID</string>
    <string name="xxx_xxx_xxxx">XXX-XXX-XXXX</string>
    <string name="request_payment">Request Payment</string>
    <string name="waiting_for_payment">Waiting for Payment...</string>
    <string name="ngn">NGN</string>
    <string name="naira_svg">naira svg image</string>
    <string name="qr_code">QR Code</string>
    <string name="enter_wallet_id_and_amount_to_request_payment">Enter wallet ID and amount to request payment</string>
    <string name="requested_amount">Requested Amount</string>
    <string name="wallet_holder">Wallet Holder</string>
    <string name="wallet_holder_icon">wallet holder icon</string>
    <string name="clear_text">Clear</string>
    <string name="scan_to_pay_button">Scan to pay requested amount</string>
    <string name="scan_to_pay_text">Scan to Pay Amount</string>
    <string name="close_scan_pay_qr_button">Close Button for Scan to Pay with QR code</string>
    <string name="process_requested_amount_text">Processing requested amount...</string>
    <string name="log_out">Logout</string>
    <string name="result_icon_text">status icon for otp authentication</string>
    <string name="totp_code">TOTP Code</string>
    <string name="totp_auth">TOTP</string>
    <string name="regenerate_otp_code">Regenerate Code</string>
    <string name="no_secret_key">No Secret Key Available</string>
    <string name="welcome_to_shopwallet">Welcome to ShopWallet!</string>
    <string name="skip">Skip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show">Show</string>
    <string name="show_transactions">Show Transactions</string>
    <string name="hide_show_transactions">Hide Transactions</string>
</resources>