<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        />
    <item
        android:id="@+id/nav_qr_auth"
        android:icon="@drawable/ic_baseline_qr_code_24"
        android:title="@string/qr_auth" />
    <item
        android:id="@+id/nav_otp_auth"
        android:icon="@drawable/ic_baseline_123_24"
        android:title="@string/otp_auth" />
    <item
        android:id="@+id/nav_totp_auth"
        android:icon="@drawable/ic_baseline_add_moderator_24"
        android:title="@string/totp_auth" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings" />
</menu>