<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pagebg"
    tools:context=".Agreements">

    <ImageView
        android:id="@+id/agreeImageViewLogo"
        android:layout_width="117dp"
        android:layout_height="108dp"
        android:contentDescription="@string/shopwallet_logo_description"
        android:src="@drawable/shop_wallet_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <TextView
        android:id="@+id/agreeHeaderTextView"
        android:layout_width="262dp"
        android:layout_height="36dp"
        android:layout_marginTop="40dp"
        android:gravity="center|center_horizontal"
        android:text="@string/terms_and_conditions"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agreeImageViewLogo" />

    <!--add the 3 agreements check boxes here-->

    <CheckBox
        android:id="@+id/agreeGccsCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:buttonTint="@color/white"
        android:drawableTint="@color/chipBackgroundColor"
        android:minHeight="48dp"
        android:text="@string/agreement_to_terms_of_use"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agreeHeaderTextView" />

    <CheckBox
        android:id="@+id/agreePersonCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:buttonTint="@color/white"
        android:minHeight="48dp"
        android:text="@string/agreement_to_personal_information_processing_policy"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agreeGccsCheckBox" />

    <CheckBox
        android:id="@+id/agreeDeviceCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:minHeight="48dp"
        android:text="@string/agreement_to_device_information_use"
        android:textColor="@color/white"
        android:buttonTint="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agreePersonCheckBox" />

    <Button
        android:id="@+id/agreeAndRegisterNextButton"
        android:layout_width="206dp"
        android:layout_height="48dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/rounded_button"
        android:text="@string/next_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agreeDeviceCheckBox"
        app:layout_constraintVertical_bias="0.996" />

</androidx.constraintlayout.widget.ConstraintLayout>