<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    app:layoutDescription="@xml/activity_money_transfer_scene"
    tools:context=".moneyTransfer">

    <!-- AppBar with Toolbar -->

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/moneyTransferAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/moneyTransferToolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="#F5FFFFFF"
            android:title="@string/authentication_type_text"
            android:titleTextColor="@color/white"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- EditText for Amount Input -->

    <!-- TextView for Minimum Amount Note -->

    <!-- Button for Next Action -->

    <EditText
        android:id="@+id/phoneNumberReloadInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="36dp"
        android:autofillHints="Enter Receiver Phone"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_baseline_credit_card_24"
        android:drawablePadding="8dp"
        android:hint="@string/wallet_number"
        android:inputType="phone"
        android:padding="15dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moneyTransferAppBarLayout" />

    <EditText
        android:id="@+id/receiverNameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:autofillHints="Enter Receiver's Name"
        android:background="@drawable/rounded_bottom_sheet"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="8dp"
        android:hint="@string/recipients_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberReloadInput" />

    <EditText
        android:id="@+id/creditAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="36dp"
        android:autofillHints="@string/enter_amount"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_baseline_money_24"
        android:drawablePadding="8dp"
        android:hint="@string/enter_amount_to_transfer"
        android:inputType="numberDecimal"
        android:padding="15dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receiverNameInput" />

    <TextView
        android:id="@+id/noteDeductionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/note_deduction"
        android:textColor="#FFF8E1"
        android:textSize="12.5sp"
        app:layout_constraintBottom_toTopOf="@+id/submitMoneyTransferButton"
        app:layout_constraintEnd_toEndOf="@+id/submitMoneyTransferButton"
        app:layout_constraintStart_toStartOf="@+id/submitMoneyTransferButton"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/submitMoneyTransferButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_button"
        android:text="@string/send_money"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creditAmount" />

    <ProgressBar
        android:id="@+id/moneyTransferProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/purple_700"
        app:layout_constraintBottom_toTopOf="@+id/noteDeductionTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creditAmount" />

    <ImageButton
        android:id="@+id/scanToPayImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/scan_to_pay_button"
        android:contextClickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitMoneyTransferButton"
        app:srcCompat="@drawable/ic_baseline_qr_code_scanner_24" />

    <TextView
        android:id="@+id/scanToPayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/scan_to_pay_text"
        android:textColor="#FFF8E1"
        android:textSize="12.5sp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/submitMoneyTransferButton"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.motion.widget.MotionLayout>