<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createAccountConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pagebg"
    tools:context=".CreateAccount">

    <ImageView
        android:id="@+id/authenticationHistoryImageViewLogo"
        android:layout_width="117dp"
        android:layout_height="108dp"
        android:contentDescription="@string/shopwallet_logo_description"
        android:src="@drawable/shop_wallet_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <EditText
        android:id="@+id/phoneNumberReloadInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="Enter User ID"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="8dp"
        android:hint="@string/enter_user_id"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/emailAddressInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authenticationHistoryImageViewLogo" />

    <EditText
        android:id="@+id/emailAddressInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="Enter Email Address"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="8dp"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberReloadInput" />

    <EditText
        android:id="@+id/phoneNumberInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="Enter Phone Address"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_baseline_local_phone_24"
        android:drawablePadding="8dp"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:padding="15dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressInput" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="Enter Full Name"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="8dp"
        android:hint="@string/enter_full_name"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberInput" />

    <TextView
        android:id="@+id/haveAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/already_have_an_account"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="16sp"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintStart_toStartOf="@+id/nameInput"
        app:layout_constraintTop_toBottomOf="@+id/nameInput" />

    <TextView
        android:id="@+id/SignInTextView"
        android:layout_width="77dp"
        android:layout_height="21dp"
        android:layout_marginTop="32dp"
        android:text="@string/signInButtonText"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toEndOf="@+id/haveAccountTextView"
        app:layout_constraintTop_toBottomOf="@+id/nameInput" />

    <Button
        android:id="@+id/selectAuthTypeNextButton"
        android:layout_width="206dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:text="@string/next_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInput"
        app:layout_constraintVertical_bias="0.84" />

    <TextView
        android:id="@+id/deviceRegisterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_creation"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumberReloadInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authenticationHistoryImageViewLogo" />

</androidx.constraintlayout.widget.ConstraintLayout>